# Gerber2nc

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
gerber2nc/: __init__.py  __main__.py  cli.py  constants.py  file_utils.py  gcode.py  models.py  processing.py  visualization.py
gerber2nc/parsers/: __init__.py  drill.py  gerber.py
tests/: __init__.py  test_cli.py  test_file_utils.py  test_gcode.py  test_main.py  test_models.py  test_parsers.py  test_processing.py  test_visualization.py
