[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gerber2nc"
version = "2.0.0"
description = "Convert Gerber PCB files to G-code for CNC milling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matthias Wandel"},
    {name = "Enrico Gasparini"},
]
requires-python = ">=3.10"
keywords = ["gerber", "gcode", "cnc", "pcb", "kicad", "fritzing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
gerber2nc = "gerber2nc.cli:main"

[project.urls]
Homepage = "https://github.com/dovershill/Gerber2nc"
Repository = "https://github.com/dovershill/Gerber2nc"

[tool.setuptools.packages.find]
include = ["gerber2nc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
